1. 优化部分代码 (#356)